13905 - Inserimento controllo su ruoli con docenza non inseriti per FSC Corretta gestione dei messaggi di conferma per cui veniva mostrato solo il primo e la conferma confermava anche i successivi, ora vengono mostrati tutti i messaggi.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -450,6 +450,8 @@ label.aggiungi_domanda_in_odg=Aggiungi Domanda in Ordine del giorno
 label.aggiungi_evento=Aggiungi evento
 label.aggiungi_ruolo=Aggiungi Ruolo
 label.aggiungi_sede=Aggiungi sede
+label.alert_fsc_docente_non_in_eventi=ATTENZIONE! Il docente {0} non è utilizzato negli eventi
+label.alert_fsc_docenti_non_in_eventi=ATTENZIONE! I docenti {0}, non sono utilizzati negli eventi
 label.alert_fsc_tutor_partecipanti=ATTENZIONE! Si ricorda il rispetto del rapporto tutor/discente di 1:5
 label.allega=Allega
 label.allega_contratti_sponsor=Allega Contratti Sponsor
@@ -1391,7 +1393,7 @@ label.richiestaIntegrazione=in richiesta di integrazione
 label.richiestaPreavvisoRigetto=in richiesta di preavviso di rigetto
 label.richiesta_accreditamento=Richiesta di accreditamento
 label.richiesta_conferma=Richiesta di conferma
-label.richiesta_conferma_cambio_crediti=Attenzione! Le modifiche effettuate comporteranno una modifica dei crediti attribuiti all''evento da: {0} a: {1}
+label.richiesta_conferma_cambio_crediti=ATTENZIONE! Le modifiche effettuate comporteranno una modifica dei crediti attribuiti all''evento da: {0} a: {1}
 label.richiesta_integrazione=Richiesta di Integrazione
 label.richiesta_preavviso_di_rigetto=Richiesta Preavviso di Rigetto
 label.richiesta_preavviso_rigetto=Richiesta Preavviso di Rigetto
