--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -645,6 +645,7 @@ label.crediti=Crediti ECM
 label.crediti_acquisiti=Crediti Acquisiti
 label.crediti_formativi_attribuiti_evento=Crediti attribuiti all'evento
 label.crediti_formativi_attribuiti_utente=Crediti ECM attribuiti dal Provider
+label.crediti_formativi_attribuiti_utente_motivazione=Motivazione Crediti ECM attribuiti dal Provider
 label.crediti_formativi_proposti_dal_sistema=Crediti ECM proposti dal sistema
 label.cv=Curriculum vitae
 label.cv_aggiornato=CV Aggiornato
