#13903 - etichetta tipologia attivita di ricerca

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -847,6 +847,7 @@ label.eventofsc_ottenutoComitatoEtico_no_question_mark=Ottenuto il parere del co
 label.eventofsc_sperimentazioneClinica=Sperimentazione Clinica
 label.eventofsc_tipologiaGruppo=Tipologia gruppo
 label.eventofsc_tipologiaSperimentazione=Tipologia sperimentazione
+label.eventofsc_tipologiaAttivitaDiRicerca=Tipologia attività di ricerca
 label.facoltativo=facoltativo
 label.faq=Faq
 label.fase=Fase
