--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -507,8 +507,8 @@ label.aperte=Aperte
 label.appartiene_a_obiettivo_strategico_nazionale=Obiettivo strategico Nazionale?
 label.applica=Applica
 label.apri_tutte=Apri tutte
-label.archive_selected_events=Archive Selected Event/Events
 label.archivia=Archivia
+label.archivia_eventi_selezionati=Archivia evento/i selezionato/i
 label.archivia_selezionate=Archivia selezionate
 label.archivia_success=Event Success
 label.argomento=Argomento
@@ -845,9 +845,9 @@ label.evento_to_cogeaps_title=Trasmissione XML partecipanti alla Regione Veneto 
 label.eventofsc_ottenutoComitatoEtico=Ottenuto il parere del comitato etico?
 label.eventofsc_ottenutoComitatoEtico_no_question_mark=Ottenuto il parere del comitato etico
 label.eventofsc_sperimentazioneClinica=Sperimentazione Clinica
+label.eventofsc_tipologiaAttivitaDiRicerca=Tipologia attività di ricerca
 label.eventofsc_tipologiaGruppo=Tipologia gruppo
 label.eventofsc_tipologiaSperimentazione=Tipologia sperimentazione
-label.eventofsc_tipologiaAttivitaDiRicerca=Tipologia attività di ricerca
 label.facoltativo=facoltativo
 label.faq=Faq
 label.fase=Fase
@@ -1114,6 +1114,7 @@ label.nessun_contratto=Nessun contratto
 label.nessun_cv=Nessun CV
 label.nessun_evento_list=Non ci sono eventi!
 label.nessun_evento_piano_formativo=Nessun evento inserito nel piano formativo
+label.nessun_evento_selezionato=Nessun evento selezionato!
 label.nessun_file_caricato=Nessun File caricato
 label.nessun_file_generato=Nessun File generato
 label.nessun_file_selezionato=Nessun file selezionato
@@ -1121,6 +1122,7 @@ label.nessun_messaggio_non_letto=Nessun messaggio ancora da leggere
 label.nessun_pagamento_trovato=Nessun Pagamento Trovato
 label.nessun_piano_formativo=Non ci sono piani formativi!
 label.nessun_provider=Non ci sono provider registrati!
+label.nessun_provider_selezionato=Nessun Provider selezionato!
 label.nessun_responsabile_registrato=Nessun Responsabile Registrato
 label.nessun_sponsor_list=Non ci sono sponsor!
 label.nessuna_attivita_registrata=Nessuna Attività Registrata
