12313 - Proroga accreditamento provvisorio da interfaccia

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1311,6 +1311,7 @@ label.programma=Programma
 label.programma_attività_formativa=Programma attività formativa
 label.programma_del=Programma del
 label.propertyName=Proprietà
+label.proroga_validita_accreditamento_corrente=Proroga validità accr. corrente
 label.protocolli_sospesi=Protocolli in sospeso
 label.proveniente_da_accreditamento=Piano formativo inserito nella domanda di accreditamento (non modificabile)
 label.provider=Provider
