--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -451,8 +451,8 @@ label.aggiungi_domanda_in_odg=Aggiungi Domanda in Ordine del giorno
 label.aggiungi_evento=Aggiungi evento
 label.aggiungi_ruolo=Aggiungi Ruolo
 label.aggiungi_sede=Aggiungi sede
-label.alert_fsc_docente_non_in_eventi=ATTENZIONE! Il docente {0} non è utilizzato negli eventi
-label.alert_fsc_docenti_non_in_eventi=ATTENZIONE! I docenti {0}, non sono utilizzati negli eventi
+label.alert_fsc_docente_non_in_eventi=ATTENZIONE! Il docente {0} non è utilizzato nelle attività
+label.alert_fsc_docenti_non_in_eventi=ATTENZIONE! I docenti {0}, non sono utilizzati nelle attività
 label.alert_fsc_tutor_partecipanti=ATTENZIONE! Si ricorda il rispetto del rapporto tutor/discente di 1:5
 label.allega=Allega
 label.allega_contratti_sponsor=Allega Contratti Sponsor
@@ -1727,7 +1727,7 @@ message.quietanza_pagamento_salvata=La Quietanza del Pagamento è stata salvata 
 message.quotaAnnuale_salvata=La Data Scadenza Pagamento è stata aggiornata con successo.
 message.relazione_annuale_rielaborata=Relazione Annuale rielaborata e salvata in bozza con successo.
 message.relazione_annuale_salvata=Relazione Annuale salvata con successo.
-message.riassegna=Il riassegnamento è stato fatto con successo.
+message.riassegna=La riassegnazione è stata fatta con successo.
 message.richiesta_variazione_dati_inviata=Richiesta variazione dati inviata con successo.
 message.risposta_inviata=Risposta inviata con successo.
 message.scadenze_evento_aggiornate=Scadenze dell'evento aggiornate con successo.
