- ERM014007 - aggiunta campi in export - modificati label sui pulsanti

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -579,6 +579,7 @@ label.codiceFiscaleOrIVA=Codice fiscale / Partita IVA
 label.codiceFiscaleOrIVAProvider=Codice Fiscale / Partita IVA Provider
 label.codice_fiscale=Codice Fiscale
 label.codice_identificativo=Codice Identificativo
+label.codice_identificativo.pdf=ID
 label.codifica=Codifica Ruolo XML
 label.cogeaps=Co.Ge.A.P.S.
 label.cognome=Cognome
@@ -813,6 +814,7 @@ label.esito_valutazioni=Esito della valutazione
 label.esperienzaFormazione=Esperienza formazione in ambito sanitario
 label.esperti=Esperti
 label.esporta_pdf=Esporta in pdf
+label.esporta_csv=Esporta in csv
 label.estrattoBilancioComplessivo=Estratto del bilancio complessivo degli ultimi 3 anni
 label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni e budget previsionale
 label.eventi=Eventi
@@ -1221,7 +1223,9 @@ label.obiettivo_formativo=Obiettivo Formativo
 label.obiettivo_formativo_nazionale=Obiettivo Strategico Nazionale / area di acquisizione competenze
 label.obiettivo_formativo_regionale=Obiettivo Strategico Regionale
 label.obiettivo_strategico_nazionale=Obiettivo strategico Nazionale / Aree di acquisizione competenze
+label.obiettivo_strategico_nazionale.pdf=Obiettivo Nazionale
 label.obiettivo_strategico_regionale=Obiettivo strategico Regionale
+label.obiettivo_strategico_regionale.pdf=Obiettivo Regionale
 label.oggetto=Oggetto:
 label.oggetto_discussione=Motivazione
 label.oggetto_list=Oggetto
@@ -1301,11 +1305,14 @@ label.privata=Privata
 label.procedura_formativa=Tipologia evento
 label.procedura_verifica_qualita=\u00C8 prevista una procedura di verifica della qualità percepita
 label.procedure_formative_tipologia=Tipologia dell'offerta formativa
+label.procedure_formative_tipologia.pdf=Tipo evento
 label.professione=Professione
 label.professioni=Professioni
 label.professioniAccreditamento=Accreditamento per professioni
 label.professioni_cui_evento_si_riferisce=Professioni a cui l'evento si riferisce
+label.professioni_cui_evento_si_riferisce.pdf=Professioni
 label.professioni_discipline=Professioni / Discipline
+label.professioni_discipline.pdf=Professioni / Discipline
 label.profili=Profili
 label.profilo=Profilo
 label.programma=Programma
