14213 - Inserire controllo per impedire ripetizione stesso ruolo in medesima attività FSC

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -283,7 +283,9 @@ error.campi_mancanti_responsabile_segreteria=Alcuni campi del responsabile della
 error.campi_mancanti_responsabili=Alcuni campi dei responsabili scientifici segnalati in rosso non sono stati inseriti correttamente
 error.campi_mancanti_sponsor=Alcuni campi degli sponsor segnati in rosso non sono stati inseriti correttamente
 error.cf_duplicated=Codice Fiscale già inserito nel sistema
-error.persona_evento_duplicated=La persona con il Ruolo e il Titolare/Sostituto impostati è già presente nella lista
+error.persona_evento_duplicated=La persona è già presente nella lista
+error.persona_evento_duplicated_ruolo_titolare=La persona con il Ruolo e il Titolare/Sostituto impostati è già presente nella lista
+error.persona_evento_duplicated_svolge_attivita_di_ricerca=La persona con Svolge attività di docenza impostato è già presente nella lista
 error.codiceFiscale.duplicated=il codicefiscale risulta già registrato nel sistema
 error.codiceFiscale.firmatario=il codice fiscale del firmatario non corrisponde al Legale Rappresentante o suo Delegato
 error.complete=campo non completo
@@ -378,6 +380,7 @@ error.pochi_partecipanti200=Il numero minimo di partecipanti per questa tipologi
 error.professioni_non_conformi_con_accreditamento=Le professioni dei Componenti del Comitato Scientifico non sono conformi con le professioni dell''Accreditamento
 error.ratio_metodologie_interattive_res=ATTENZIONE! Sono state selezionate metodologie di didattica interattiva, si ricorda che al fine di garantire un’adeguata partecipazione è necessario che il numero dei discenti sia limitato (massimo 25 partecipanti per tutor/relatore/docente titolare)
 error.repeat=non corrisponde
+error.responsabili_scientifici_duplicati=Sono presenti dei responsabili scientifici duplicati
 error.risultato_atteso_non_utilizzato=Risultato atteso non utilizzato
 error.ruolo_coordinatore_x_non_valido=Ruolo di Coordinatore A, B, C non valido
 error.ruolo_esperto_x_non_valido=Ruolo di Esperto A, B, C non valido
