Annulla e rigenera protocollo

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -283,7 +283,6 @@ error.campi_mancanti_responsabile_segreteria=Alcuni campi del responsabile della
 error.campi_mancanti_responsabili=Alcuni campi dei responsabili scientifici segnalati in rosso non sono stati inseriti correttamente
 error.campi_mancanti_sponsor=Alcuni campi degli sponsor segnati in rosso non sono stati inseriti correttamente
 error.cf_duplicated=Codice Fiscale già inserito nel sistema
-error.persona_evento_duplicated=La persona con il Ruolo e il Titolare/Sostituto impostati è già presente nella lista
 error.codiceFiscale.duplicated=il codicefiscale risulta già registrato nel sistema
 error.codiceFiscale.firmatario=il codice fiscale del firmatario non corrisponde al Legale Rappresentante o suo Delegato
 error.complete=campo non completo
@@ -374,6 +373,7 @@ error.partecipanti_corso_aggiornamento_fino_100=Il numero massimo di partecipant
 error.partitaIva.duplicated=la partita iva risulta già registrata nel sistema
 error.password.incorrect=password non esatta
 error.password_repeat=la password non coincide
+error.persona_evento_duplicated=La persona con il Ruolo e il Titolare/Sostituto impostati è già presente nella lista
 error.pochi_partecipanti200=Il numero minimo di partecipanti per questa tipologia di evento è di 200 partecipanti
 error.professioni_non_conformi_con_accreditamento=Le professioni dei Componenti del Comitato Scientifico non sono conformi con le professioni dell''Accreditamento
 error.ratio_metodologie_interattive_res=ATTENZIONE! Sono state selezionate metodologie di didattica interattiva, si ricorda che al fine di garantire un’adeguata partecipazione è necessario che il numero dei discenti sia limitato (massimo 25 partecipanti per tutor/relatore/docente titolare)
@@ -578,8 +578,8 @@ label.codiceCogeaps=Codice Co.Ge.A.P.S.
 label.codiceFiscaleOrIVA=Codice fiscale / Partita IVA
 label.codiceFiscaleOrIVAProvider=Codice Fiscale / Partita IVA Provider
 label.codice_fiscale=Codice Fiscale
-label.codice_identificativo=Codice Identificativo
 label.codice_identificativo.pdf=ID
+label.codice_identificativo=Codice Identificativo
 label.codifica=Codifica Ruolo XML
 label.cogeaps=Co.Ge.A.P.S.
 label.cognome=Cognome
@@ -813,8 +813,8 @@ label.esito_valutazione=Esito Valutazione
 label.esito_valutazioni=Esito della valutazione
 label.esperienzaFormazione=Esperienza formazione in ambito sanitario
 label.esperti=Esperti
-label.esporta_pdf=Esporta in pdf
 label.esporta_csv=Esporta in csv
+label.esporta_pdf=Esporta in pdf
 label.estrattoBilancioComplessivo=Estratto del bilancio complessivo degli ultimi 3 anni
 label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni e budget previsionale
 label.eventi=Eventi
@@ -1222,10 +1222,10 @@ label.nuovo_utente=Nuovo Utente
 label.obiettivo_formativo=Obiettivo Formativo
 label.obiettivo_formativo_nazionale=Obiettivo Strategico Nazionale / area di acquisizione competenze
 label.obiettivo_formativo_regionale=Obiettivo Strategico Regionale
-label.obiettivo_strategico_nazionale=Obiettivo strategico Nazionale / Aree di acquisizione competenze
 label.obiettivo_strategico_nazionale.pdf=Obiettivo Nazionale
-label.obiettivo_strategico_regionale=Obiettivo strategico Regionale
+label.obiettivo_strategico_nazionale=Obiettivo strategico Nazionale / Aree di acquisizione competenze
 label.obiettivo_strategico_regionale.pdf=Obiettivo Regionale
+label.obiettivo_strategico_regionale=Obiettivo strategico Regionale
 label.oggetto=Oggetto:
 label.oggetto_discussione=Motivazione
 label.oggetto_list=Oggetto
@@ -1304,15 +1304,15 @@ label.prima=Prima
 label.privata=Privata
 label.procedura_formativa=Tipologia evento
 label.procedura_verifica_qualita=\u00C8 prevista una procedura di verifica della qualità percepita
-label.procedure_formative_tipologia=Tipologia dell'offerta formativa
 label.procedure_formative_tipologia.pdf=Tipo evento
+label.procedure_formative_tipologia=Tipologia dell'offerta formativa
 label.professione=Professione
 label.professioni=Professioni
 label.professioniAccreditamento=Accreditamento per professioni
-label.professioni_cui_evento_si_riferisce=Professioni a cui l'evento si riferisce
 label.professioni_cui_evento_si_riferisce.pdf=Professioni
-label.professioni_discipline=Professioni / Discipline
+label.professioni_cui_evento_si_riferisce=Professioni a cui l'evento si riferisce
 label.professioni_discipline.pdf=Professioni / Discipline
+label.professioni_discipline=Professioni / Discipline
 label.profili=Profili
 label.profilo=Profilo
 label.programma=Programma
@@ -1433,6 +1433,7 @@ label.riepilogo_valutazione_domandaTipo_domandaId_providerDenominazione_valutato
 label.riepilogo_valutazione_valutatoreFullNome_domandaTipo_providerDenominazione_providerId=Riepilogo della Valutazione eseguita dall''utente {0} relativo alla Domanda di Accreditamento {1}, richiesta dal Provider {2}, ID {3}
 label.riepilogo_valutazioni_complessive=Riepilogo delle Valutazioni Complessive
 label.riepilogo_valutazioni_storicizzate=Riepilogo delle valutazioni in storico
+label.riesegui=Riesegui
 label.rimuovi=Rimuovi
 label.rimuovi_evento=Rimuovi evento
 label.ripristina_tabella=Pulisci tabella
@@ -1728,6 +1729,8 @@ message.piano_formativo_anno_gia_inserito=Piano formativo per l''anno {0} già i
 message.presa_in_carico=La Domanda di Accreditamento è stata correttamente presa in carico.
 message.presa_visione_success=Presa Visione eseguita correttamente.
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
+message.protocollo_annullato=Protocollo è stato annullato correttamente.
+message.protocollo_rieseguito=Protocollo è stato annullato ed è stata effettuata una nuova richiesta di protocollazione.
 message.provider_bloccato_success=Richiesta di blocco del Provider inviata in Protocollazione con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.quietanza_pagamento_salvata=La Quietanza del Pagamento è stata salvata con successo.
