ECM 14013 - Creazione pulsante per pdf in preview prima dell'invio della richiesta di variazione dati che permette di scaricare un pdf con i dati come "Mostra riepilogo domanda" con una spunta su tutti i campi abilitati dalla segreteria per essere modificati dal provider

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1102,6 +1102,7 @@ label.mostra=Mostra
 label.mostra_invii_precedenti=Mostra invii precedenti
 label.mostra_registro_operazioni=Mostra registro operazioni
 label.mostra_riepilogo=Mostra riepilogo domanda
+label.mostra_riepilogo_integrazioni=Mostra riepilogo integrazioni domanda
 label.mostra_riepilogo_piano_formativo=Mostra riepilogo piano formativo
 label.mostra_riepilogo_valutazioni=Mostra riepilogo valutazione
 label.mostra_storico_valutazioni=Mostra storico valutazioni
