--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1157,7 +1157,7 @@ label.nome=Nome
 label.nomeFile=Nome File
 label.nome_partner=Nome del partner
 label.nome_provider=Nome del Provider
-label.nome_sponsor=Nome dello sponsor
+label.nome_sponsor=Nome sponsor e importo finanziario in € (es.1500,00) o di risorse fornite
 label.nome_utente=Nome Utente
 label.non_abilitato=Non abilitato
 label.non_ancora_lette=non ancora lette
