--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -645,7 +645,7 @@ label.coordinatori=Coordinatori
 label.costo_totale_eventi=Costo totale eventi
 label.crea_account=Crea Account
 label.crea_anagrafica=Crea Anagrafica
-label.creazione_evento=Crea Evento
+label.creazione_evento=Crea evento extra PFA
 label.creazione_nuovo_evento=Creazione Nuovo Evento {0}
 label.creazione_profilo=Creazione Profilo
 label.creazione_utente=Creazione Utente
@@ -1464,7 +1464,7 @@ label.scegli_file=Scegli file
 label.scelta_evento_piano_formativo=Scelta Evento del Piano Formativo da attuare
 label.scelta_evento_riedizione=Scelta Evento da rieditare
 label.scelta_modalita=Scelta della modalità di inserimento
-label.scelta_procedura_formativa_evento=Scelta della Procedura Formativa dell'Evento da inserire
+label.scelta_procedura_formativa_evento=Evento extra PFA: scelta della tipologia formativa
 label.schedaQualitaPercepita=Scheda Qualità Percepita
 label.scheda_provider=Scheda provider
 label.scheda_qualita_percepita=Scheda Qualità Percepita
