fix segreteria@ecm.it fake mail

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1485,7 +1485,7 @@ label.seduta_target=Seduta nella quale spostare la Domanda di Accreditamento
 label.sedute_inserite=Sedute inserite
 label.segreteria=Segreteria
 label.segreteria_ecm=Segreteria ECM
-label.segreteria_ecm_mail=segreteria@ecm.it
+label.segreteria_ecm_mail=formazione.sviluppo@azero.veneto.it
 label.sei_un_nuovo_provider=Sei un nuovo provider?
 label.seleziona=Seleziona...
 label.seleziona_altro_ODG=Seleziona l'Ordine Del Giorno nel quale spostare la domanda di Accreditamento selezionata
