--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1623,6 +1623,7 @@ label.valutazione=Valutazione
 label.valutazioneSulCampoAllegato1=Allegato 1 (opzionale)
 label.valutazioneSulCampoAllegato2=Allegato 2 (opzionale)
 label.valutazioneSulCampoAllegato3=Allegato 3 (opzionale)
+label.verbaleValutazioneSulCampoPdf=Verbale Valutazione sul Campo
 label.valutazione_commissione=Valutazione Commissione
 label.valutazione_commissione_ECM=Valutazione Commissione ECM
 label.valutazione_complessiva=Valutazione complessiva
