--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1623,7 +1623,7 @@ label.valutazione=Valutazione
 label.valutazioneSulCampoAllegato1=Allegato 1 (opzionale)
 label.valutazioneSulCampoAllegato2=Allegato 2 (opzionale)
 label.valutazioneSulCampoAllegato3=Allegato 3 (opzionale)
-label.verbaleValutazioneSulCampoPdf=Verbale Valutazione sul Campo
+label.VerbalePdfFirmato_it=Verbale Valutazione sul Campo
 label.valutazione_commissione=Valutazione Commissione
 label.valutazione_commissione_ECM=Valutazione Commissione ECM
 label.valutazione_complessiva=Valutazione complessiva
@@ -1768,6 +1768,7 @@ message.verbale_salvato=Verbale aggiornato con successo.
 message.warning=Attenzione
 message.warning_no_privilegi_necessari_risorsa=L'utente risulta non avere i privilegi necessari per accedere alla risorsa.
 message.xml_evento_validation_ok=Report importato con successo.
+message.documenti_valutazione_complessiva_salvati_it=Documenti aggiornati con successo.
 month.agosto=Agosto
 month.aprile=Aprile
 month.dicembre=Dicembre
