--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -412,6 +412,8 @@ error.vincolo_partecipanti_tutorPROGETTI_DI_MIGLIORAMENTO=\u00C8 obbligatorio in
 error.vincolo_partecipanti_tutorTRAINING_INDIVIDUALIZZATO=\u00C8 obbligatorio inserire nel programma almeno un ruolo Partecipante e un ruolo Tutor
 error.xml_evento_validation_with_db=Validazione dati evento fallita
 error.xml_validation=Errore di validazione dell'XML
+error.evento_tipo_TRAINING_INDIVIDUALIZZATO_manca_RELAZIONE_FIRMATA="evento_tipo_TRAINING_INDIVIDUALIZZATO_manca_RELAZIONE_FIRMATA"
+error.evento_tipo_NON_TRAINING_INDIVIDUALIZZATO_manca_RAPPORTO_CONCLUSIVO="error.emptyerror.evento_tipo_NON_TRAINING_INDIVIDUALIZZATO_manca_RAPPORTO_CONCLUSIVO"
 error.dataScadenzaInsertRelazioneAnnualeTroppoAvvanti=Data scadenza relazione annuale oltre i limiti previsti
 label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
