Solved ticket #13978 point 1 and 2

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -518,7 +518,7 @@ label.apri_tutte=Apri tutte
 label.archivia=Archivia
 label.archivia_eventi_selezionati=Archivia evento/i selezionato/i
 label.archivia_selezionate=Archivia selezionate
-label.archivia_success=Event Success
+label.archivia_success=Evento archiviato con successo
 label.argomento=Argomento
 label.assegna=Assegna
 label.assegna_nuovo_gruppo=Assegna Nuovi Referee
