--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -283,9 +283,6 @@ error.campi_mancanti_responsabile_segreteria=Alcuni campi del responsabile della
 error.campi_mancanti_responsabili=Alcuni campi dei responsabili scientifici segnalati in rosso non sono stati inseriti correttamente
 error.campi_mancanti_sponsor=Alcuni campi degli sponsor segnati in rosso non sono stati inseriti correttamente
 error.cf_duplicated=Codice Fiscale già inserito nel sistema
-error.persona_evento_duplicated=La persona è già presente nella lista
-error.persona_evento_duplicated_ruolo_titolare=La persona con il Ruolo e il Titolare/Sostituto impostati è già presente nella lista
-error.persona_evento_duplicated_svolge_attivita_di_ricerca=La persona con Svolge attività di docenza impostato è già presente nella lista
 error.codiceFiscale.duplicated=il codicefiscale risulta già registrato nel sistema
 error.codiceFiscale.firmatario=il codice fiscale del firmatario non corrisponde al Legale Rappresentante o suo Delegato
 error.complete=campo non completo
@@ -293,6 +290,7 @@ error.componente_presente=\u00C8 già presente questo Componente nel Comitato Sc
 error.coordinatore_presente=\u00C8 già presente un Coordinatore nel Comitato Scientifico
 error.csv_import_eventi_piano_formativo_error=Importazione eventi da CSV fallita
 error.csv_to_xml_report_error=Errore durante la produzione del file XML da CSV
+error.dataScadenzaInsertRelazioneAnnualeTroppoAvvanti=Data scadenza relazione annuale oltre i limiti previsti
 error.data_fine_non_valida=La data di fine non può essere antecedente alla data di inizio
 error.data_fine_res_non_valida=La data di fine dell'Evento deve essere compresa nello stesso anno solare della data di inizio
 error.data_fine_riedizione_non_valida=La riedizione si deve svolgere nell'anno solare di riferimento dell'Evento rieditato
@@ -333,6 +331,8 @@ error.errore_tabella_fsc_versione2_TRAINING_INDIVIDUALIZZATO=Controllare nel rie
 error.errori_calcolo_tabella_riepilogo=Si è verificato un errore nel calcolo della tabella di riepilogo dei ruoli
 error.evento_deve_essere_sponsorizzato=La sponsorizzazione da aziende che trattano alimenti per la prima infanzia è possibile solo per eventi sponsorizzati
 error.evento_non_trovato=Non è stato trovato alcun evento corrispondente all'Id inserito.
+error.evento_tipo_NON_TRAINING_INDIVIDUALIZZATO_manca_RAPPORTO_CONCLUSIVO=Manca flag Rapporto conclusivo basato su valutazione dell’apprendimento valutata dal tutor
+error.evento_tipo_TRAINING_INDIVIDUALIZZATO_manca_RELAZIONE_FIRMATA=Manca flag Rapporto conclusivo basato su valutazione dell’apprendimento valutata dal responsabile scientifico
 error.fad_data_fine_non_appartenente_triennio_attuale=La data di fine non appartiene al triennio attuale 2017 - 2019
 error.file_non_firmato=Il file deve essere firmato digitalmente
 error.file_vuoto=Il file inserito è vuoto.
@@ -377,6 +377,9 @@ error.partitaIva.duplicated=la partita iva risulta già registrata nel sistema
 error.password.incorrect=password non esatta
 error.password_repeat=la password non coincide
 error.persona_evento_duplicated=La persona con il Ruolo e il Titolare/Sostituto impostati è già presente nella lista
+error.persona_evento_duplicated=La persona è già presente nella lista
+error.persona_evento_duplicated_ruolo_titolare=La persona con il Ruolo e il Titolare/Sostituto impostati è già presente nella lista
+error.persona_evento_duplicated_svolge_attivita_di_ricerca=La persona con Svolge attività di docenza impostato è già presente nella lista
 error.pochi_partecipanti200=Il numero minimo di partecipanti per questa tipologia di evento è di 200 partecipanti
 error.professioni_non_conformi_con_accreditamento=Le professioni dei Componenti del Comitato Scientifico non sono conformi con le professioni dell''Accreditamento
 error.ratio_metodologie_interattive_res=ATTENZIONE! Sono state selezionate metodologie di didattica interattiva, si ricorda che al fine di garantire un’adeguata partecipazione è necessario che il numero dei discenti sia limitato (massimo 25 partecipanti per tutor/relatore/docente titolare)
@@ -412,13 +415,11 @@ error.vincolo_partecipanti_tutorPROGETTI_DI_MIGLIORAMENTO=\u00C8 obbligatorio in
 error.vincolo_partecipanti_tutorTRAINING_INDIVIDUALIZZATO=\u00C8 obbligatorio inserire nel programma almeno un ruolo Partecipante e un ruolo Tutor
 error.xml_evento_validation_with_db=Validazione dati evento fallita
 error.xml_validation=Errore di validazione dell'XML
-error.evento_tipo_TRAINING_INDIVIDUALIZZATO_manca_RELAZIONE_FIRMATA=Manca flag Rapporto conclusivo basato su valutazione dell’apprendimento valutata dal responsabile scientifico
-error.evento_tipo_NON_TRAINING_INDIVIDUALIZZATO_manca_RAPPORTO_CONCLUSIVO=Manca flag Rapporto conclusivo basato su valutazione dell’apprendimento valutata dal tutor
-error.dataScadenzaInsertRelazioneAnnualeTroppoAvvanti=Data scadenza relazione annuale oltre i limiti previsti
 label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
 label.Ok=Ok
 label.RES=formazione residenziale (RES)
+label.VerbalePdfFirmato=Verbale Valutazione sul Campo
 label.a=A
 label.a_partire_da=a partire dal:
 label.abilita=Abilita
@@ -586,8 +587,8 @@ label.codiceCogeaps=Codice Co.Ge.A.P.S.
 label.codiceFiscaleOrIVA=Codice fiscale / Partita IVA
 label.codiceFiscaleOrIVAProvider=Codice Fiscale / Partita IVA Provider
 label.codice_fiscale=Codice Fiscale
-label.codice_identificativo=Codice Identificativo
 label.codice_identificativo.pdf=ID
+label.codice_identificativo=Codice Identificativo
 label.codifica=Codifica Ruolo XML
 label.cogeaps=Co.Ge.A.P.S.
 label.cognome=Cognome
@@ -821,8 +822,8 @@ label.esito_valutazione=Esito Valutazione
 label.esito_valutazioni=Esito della valutazione
 label.esperienzaFormazione=Esperienza formazione in ambito sanitario
 label.esperti=Esperti
-label.esporta_pdf=Esporta in pdf
 label.esporta_csv=Esporta in csv
+label.esporta_pdf=Esporta in pdf
 label.estrattoBilancioComplessivo=Estratto del bilancio complessivo degli ultimi 3 anni
 label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni e budget previsionale
 label.eventi=Eventi
@@ -893,6 +894,12 @@ label.from_provider=Da: {0} ({1})
 label.from_provider_list={0} ({1})
 label.from_segreteria=Da: Segreteria ECM
 label.from_segreteria_list=Segreteria ECM
+label.fullComponentiNonModificateInIntegrazione=Il Comitato Scientifico non è stato modificato dal Provider
+label.fullResponsabileAmministrativoNonModificatoInIntegrazione=Il Responsabile Amministrativo non è stato modificato dal Provider
+label.fullResponsabileQualitaNonModificatoInIntegrazione=Il Responsabile della Qualità non è stato modificato dal Provider
+label.fullResponsabileSegreteriaNonModificatoInIntegrazione=Il Responsabile di Segreteria non è stato modificato dal Provider
+label.fullResponsabileSistemaInformaticoNonModificatoInIntegrazione=Il Responsabile Sistema Informatico non è stato modificato dal Provider
+label.fullSediNonModificateInIntegrazione=Le sedi non sono state modificate dal Provider
 label.funzionigramma=Funzionigramma
 label.genera_attestati=Genera Attestati
 label.genera_decreto=Genera Decreto
@@ -1231,10 +1238,10 @@ label.nuovo_utente=Nuovo Utente
 label.obiettivo_formativo=Obiettivo Formativo
 label.obiettivo_formativo_nazionale=Obiettivo Strategico Nazionale / area di acquisizione competenze
 label.obiettivo_formativo_regionale=Obiettivo Strategico Regionale
-label.obiettivo_strategico_nazionale=Obiettivo strategico Nazionale / Aree di acquisizione competenze
 label.obiettivo_strategico_nazionale.pdf=Obiettivo Nazionale
-label.obiettivo_strategico_regionale=Obiettivo strategico Regionale
+label.obiettivo_strategico_nazionale=Obiettivo strategico Nazionale / Aree di acquisizione competenze
 label.obiettivo_strategico_regionale.pdf=Obiettivo Regionale
+label.obiettivo_strategico_regionale=Obiettivo strategico Regionale
 label.oggetto=Oggetto:
 label.oggetto_discussione=Motivazione
 label.oggetto_list=Oggetto
@@ -1313,15 +1320,15 @@ label.prima=Prima
 label.privata=Privata
 label.procedura_formativa=Tipologia evento
 label.procedura_verifica_qualita=\u00C8 prevista una procedura di verifica della qualità percepita
-label.procedure_formative_tipologia=Tipologia dell'offerta formativa
 label.procedure_formative_tipologia.pdf=Tipo evento
+label.procedure_formative_tipologia=Tipologia dell'offerta formativa
 label.professione=Professione
 label.professioni=Professioni
 label.professioniAccreditamento=Accreditamento per professioni
-label.professioni_cui_evento_si_riferisce=Professioni a cui l'evento si riferisce
 label.professioni_cui_evento_si_riferisce.pdf=Professioni
-label.professioni_discipline=Professioni / Discipline
+label.professioni_cui_evento_si_riferisce=Professioni a cui l'evento si riferisce
 label.professioni_discipline.pdf=Professioni / Discipline
+label.professioni_discipline=Professioni / Discipline
 label.profili=Profili
 label.profilo=Profilo
 label.programma=Programma
@@ -1626,7 +1633,6 @@ label.valutazione=Valutazione
 label.valutazioneSulCampoAllegato1=Allegato 1 (opzionale)
 label.valutazioneSulCampoAllegato2=Allegato 2 (opzionale)
 label.valutazioneSulCampoAllegato3=Allegato 3 (opzionale)
-label.VerbalePdfFirmato=Verbale Valutazione sul Campo
 label.valutazione_commissione=Valutazione Commissione
 label.valutazione_commissione_ECM=Valutazione Commissione ECM
 label.valutazione_complessiva=Valutazione complessiva
@@ -1693,6 +1699,7 @@ message.coordinatori_massimo_3_no_docenza_no_crediti=I coordinatori devono esser
 message.creazione_diff_accreditamento=Creazione Diff per l'accreditamento creato con successo.
 message.dati_attivita_inseriti=I dati relativi all'attività sono stati inseriti con successo.
 message.dati_della_delibera_salvati=Dati della delibera salvati con successo.
+message.documenti_valutazione_complessiva_salvati=Documenti aggiornati con successo.
 message.documento_inviato_al_protocollo=Documento Inviato al protocollo.
 message.domanda_aggiunta=Domanda di Accreditamento inserita nella Seduta con successo.
 message.domanda_inviata=La domanda è stata inviata correttamente alla segreteria.
@@ -1771,7 +1778,6 @@ message.verbale_salvato=Verbale aggiornato con successo.
 message.warning=Attenzione
 message.warning_no_privilegi_necessari_risorsa=L'utente risulta non avere i privilegi necessari per accedere alla risorsa.
 message.xml_evento_validation_ok=Report importato con successo.
-message.documenti_valutazione_complessiva_salvati=Documenti aggiornati con successo.
 month.agosto=Agosto
 month.aprile=Aprile
 month.dicembre=Dicembre
