Added new label for create new event in piano formativo .

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -652,6 +652,7 @@ label.crea_account=Crea Account
 label.crea_anagrafica=Crea Anagrafica
 label.creazione_evento=Crea evento extra PFA
 label.creazione_nuovo_evento=Creazione Nuovo Evento {0}
+label.creazione_nuovo_evento_piano_formativo=Creazione Nuovo Evento
 label.creazione_profilo=Creazione Profilo
 label.creazione_utente=Creazione Utente
 label.credenziali_accesso=Credenziali d'accesso
