--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -339,6 +339,7 @@ error.file_vuoto=Il file inserito è vuoto.
 error.formatNonAccepted=Errore nel formato del file. \u00C8 consentito inviare solo file PDF e P7M
 error.formatNonAcceptedCSV=Errore nel formato del file. \u00C8 consentito inviare solo file CSV
 error.formatNonAcceptedXML=Errore nel formato del file. \u00C8 consentito inviare solo file XML, P7M e CSV
+error.formatNonAcceptedJPG=Errore nel formato del file. \u00C8 consentito inviare solo file JPG e PNG
 error.fsc_data_fine_non_appartenente_triennio_attuale=La data di fine non appartiene al triennio attuale 2017 - 2019
 error.invalid=formato non corretto
 error.invio_report_cogeaps=Errore durante l'invio del report al Co.Ge.A.P.S.
@@ -1380,6 +1381,7 @@ label.relazioneAnnuale=Relazione Annuale
 label.relazioneAttivitaFormativa=Relazione sull'Attività Formativa
 label.relazioneFinale=Relazione Finale
 label.relazione_annuale=Relazione Annuale
+label.logo_provider=Logo Provider
 label.relazione_annuale_anno=Relazione Annuale {0}
 label.relazione_annuale_provider=Relazione Annuale del Provider
 label.rendicontazione_inviata=Rendicontazione inviata
@@ -1678,6 +1680,10 @@ label.visualizzazione_piano_formativo=Visualizzazione del piano formativo
 label.visualizzazione_seduta=Visualizzazione dati della Seduta {0}
 label.visualizzazione_withParam=Visualizzazione {0}
 label.workshop_radio_text=Workshop/Seminari ECM che si svolgono all’interno di congressi e convegni
+label.provider_logo=Logo del Provider {0}
+label.provider_logo_dimensione=Logo Provider (dimensione massime 2mb,formato consentito JPG o PNG)
+label.provider_logo_inserimento=Inserimento logo per il Provider {0}
+label.providerFile=Logo Provider
 message.accesso_negato=ACCESSO NEGATO
 message.accreditamento_not_trovato=Nessun accreditamento attivo trovato
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
