Changes to add module for saving logo of provider .

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1684,6 +1684,10 @@ label.provider_logo=Logo del Provider {0}
 label.provider_logo_dimensione=Logo Provider (dimensione massime 2mb,formato consentito JPG o PNG)
 label.provider_logo_inserimento=Inserimento logo per il Provider {0}
 label.providerFile=Logo Provider
+label.logo_provider_da_inserire=LOGO PROVIDER DA INSERIRE
+label.inserimento_logo_provider=Inserimento logo per il Provider:\u0020
+label.inserisci_logo=Inserisci Logo
+label.modifica_logo=Modifica Logo
 message.accesso_negato=ACCESSO NEGATO
 message.accreditamento_not_trovato=Nessun accreditamento attivo trovato
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
