PDF Verbale Changes

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -603,6 +603,7 @@ label.componente_comitato=Componente
 label.componente_crec_team_leader=Componente CRECM - Team Leader
 label.componente_crecm=Componente CRECM
 label.componente_osservatorio_regionale=Componente Osservatorio Regionale
+label.componente_UOC_FSPS=Componente UOC FSPS
 label.componente_segreteria_ecm=Componente Segreteria ECM
 label.componente_segreteria_numero=Componente Segreteria {0}
 label.componente_withName=Componente: {0}
