Changes in Valutazione Dati della Struttura

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1565,6 +1565,7 @@ label.telefono=Telefono
 label.tempo_dedicato=Tempo Dedicato
 label.tempo_dedicato=Tempo Dedicato
 label.tempo_indeterminato=Tempo indeterminato
+label.numero_dipendenti=Numero dipendenti
 label.tipo=Tipo
 label.tipoOrganizzatore_nome=Tipologia
 label.tipo_Wf=Tipo di workflow attivo
