#16388 - cambio etichetta Segreteria ECM in UOC FSPS

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -604,7 +604,7 @@ label.componente_crec_team_leader=Componente CRECM - Team Leader
 label.componente_crecm=Componente CRECM
 label.componente_osservatorio_regionale=Componente Osservatorio Regionale
 label.componente_UOC_FSPS=Componente UOC FSPS
-label.componente_segreteria_ecm=Componente Segreteria ECM
+label.componente_segreteria_ecm=Componente UOC FSPS
 label.componente_segreteria_numero=Componente Segreteria {0}
 label.componente_withName=Componente: {0}
 label.componenti_comitato_scientifico=Componenti del Comitato Scientifico
@@ -895,8 +895,8 @@ label.forme_finanziamento_radio=Sono presenti altre forme di finanziamento?
 label.from=Da:
 label.from_provider=Da: {0} ({1})
 label.from_provider_list={0} ({1})
-label.from_segreteria=Da: Segreteria ECM
-label.from_segreteria_list=Segreteria ECM
+label.from_segreteria=Da: UOC FSPS
+label.from_segreteria_list=UOC FSPS
 label.fullComponentiNonModificateInIntegrazione=Il Comitato Scientifico non è stato modificato dal Provider
 label.fullResponsabileAmministrativoNonModificatoInIntegrazione=Il Responsabile Amministrativo non è stato modificato dal Provider
 label.fullResponsabileQualitaNonModificatoInIntegrazione=Il Responsabile della Qualità non è stato modificato dal Provider
@@ -955,7 +955,7 @@ label.infoAccreditamento=Informazione dell'accreditamento
 label.info_accesso_piattaforma=Accesso piattaforma FAD
 label.info_account=Accedi all'area riservata
 label.info_accreditamento=Info Accreditamento
-label.info_applicazione_integrazione=Le modifiche saranno applicate solo dopo approvazione da parte della Segreteria ECM
+label.info_applicazione_integrazione=Le modifiche saranno applicate solo dopo approvazione da parte della UOC FSPS
 label.info_blocco_legali=Accedendo alla sezione Dati dei Responsabili, i dati del Legale Rappresentante e del Delegato del Legale Rappresentante non saranno più modificabili in quanto utilizzati per il controllo della firma digitale apposta sui file allegati. Qualora il Provider abbia previsto la figura del Delegato del Legale Rappresentante il controllo sulla firma digitale dei file sarà effettuato sui dati del Delegato del Legale Rappresentante
 label.info_delega=Il richiedente è il legale rappresentante oppure è stato delegato dal Legale Rappresentante ad effettuare la presente richiesta?
 label.info_delibera=Delibera numero {0} del {1}
@@ -1499,7 +1499,7 @@ label.seduta=Seduta Ordine del Giorno
 label.seduta_target=Seduta nella quale spostare la Domanda di Accreditamento
 label.sedute_inserite=Sedute inserite
 label.segreteria=Segreteria
-label.segreteria_ecm=Segreteria ECM
+label.segreteria_ecm=UOC FSPS
 label.segreteria_ecm_mail=formazione.sviluppo@azero.veneto.it
 label.sei_un_nuovo_provider=Sei un nuovo provider?
 label.seleziona=Seleziona...
@@ -1598,7 +1598,7 @@ label.titolo_programma_formativo=Titolo del programma formativo
 label.to=A:
 label.to_provider={0} ({1})
 label.to_provider_multipli=A: destinatari multipli
-label.to_segreteria=A: Segreteria ECM
+label.to_segreteria=A: UOC FSPS
 label.torna_in_visualizzazione=Torna in visualizzazione
 label.torna_login=Torna alla pagina di login
 label.totale_crediti=Totale crediti: {0}
@@ -1777,7 +1777,7 @@ message.seduta_eliminata=Seduta eliminata.
 message.seduta_salvata=La Seduta è stata salvata con successo.
 message.seduta_valutata=Seduta conclusa correttamente con la valutazione di tutte le Domande inserite nell'Ordine del Giorno.
 message.sono_evidenziati_gli_elementi_aggiunti_dal_ultimo_accreditamento=Sono evidenziati in verde gli elementi aggiunti o completamente sostituiti rispetto l'ultima domanda di accreditamento
-message.sono_evidenziati_gli_elementi_aggiunti_e_rimossi_in_attesa_di_approvazione=Sono evidenziati gli elementi aggiunti e rimossi che saranno effettivi solo dopo approvazione da parte della Segreteria ECM.
+message.sono_evidenziati_gli_elementi_aggiunti_e_rimossi_in_attesa_di_approvazione=Sono evidenziati gli elementi aggiunti e rimossi che saranno effettivi solo dopo approvazione da parte della UOC FSPS.
 message.sottoscrivente_inserito=Sottoscrivente della Valutazione sul Campo inserito con successo!
 message.utente_creato=Il nuovo utente è stato correttamente registrato ed è stata inviata una e-mail con le credenziali di accesso.
 message.utente_salvato=L'utente è stato salvato con successo.
