#16904 - tematiche speciali interesse

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1366,6 +1366,7 @@ label.provincia=Provincia
 label.pubblica=Pubblica
 label.pulisci=Pulisci
 label.qualifica=Qualifica
+label.tematica_interesse_speciale=Tematica Speciale di interesse Nazionale o Regionale
 label.quietanzaPagamento=Quietanza di Pagamento
 label.quotaAnnuale= Quota annuale
 label.quotaAnnuale_list= Lista di quote annuale non pagate e scadute
