#16902 - condivisioneesitiapprendimento evento versione 3

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -409,6 +409,7 @@ error.troppi_partecipanti_per_tutor=Il numero dei Partecipanti supera il rapport
 error.troppi_responsabili3=I responsabili scientifici devono essere al massimo 3
 error.url=URL errato
 error.username.duplicated=username già registrato nel sistema
+error.valore_non_consentito=Valore non consentito
 error.vincolo_partecipanti_tutorATTIVITA_DI_RICERCA=\u00C8 obbligatorio inserire nel programma almeno un ruolo Partecipante
 error.vincolo_partecipanti_tutorAUDIT_CLINICO_ASSISTENZIALE=\u00C8 obbligatorio inserire nel programma almeno un ruolo Partecipante
 error.vincolo_partecipanti_tutorGRUPPI_DI_MIGLIORAMENTO=\u00C8 obbligatorio inserire nel programma almeno un ruolo Partecipante
@@ -416,7 +417,6 @@ error.vincolo_partecipanti_tutorPROGETTI_DI_MIGLIORAMENTO=\u00C8 obbligatorio in
 error.vincolo_partecipanti_tutorTRAINING_INDIVIDUALIZZATO=\u00C8 obbligatorio inserire nel programma almeno un ruolo Partecipante e un ruolo Tutor
 error.xml_evento_validation_with_db=Validazione dati evento fallita
 error.xml_validation=Errore di validazione dell'XML
-error.valore_non_consentito=Valore non consentito
 label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
 label.Ok=Ok
@@ -625,6 +625,7 @@ label.con_crediti_non_confermati=Con crediti non confermati
 label.con_medicine_non_convenzionali=con contenuti di medicine non convenzionali
 label.conclusione_del_procedimento=Conclusione del procedimento
 label.concluso=Concluso
+label.condivisione_esiti_valutazione=Condivisione con i partecipanti degli esiti della valutazione dell'apprendimento
 label.conferma=Conferma
 label.conferma_azione=Conferma Azione
 label.conferma_chiusura_comunicazione=Conferma della chiusura della Comunicazione
@@ -796,6 +797,7 @@ label.dotazione_hardware_software=Dotazione hardware e software necessaria all'u
 label.due=2
 label.durata=Durata
 label.durata_impegno_studio=Durata / Impegno studio
+label.durata_max_condivisione=Durata max della condivisione
 label.edit_datiEconomici=Modifica dei Dati Economici
 label.edit_datiStruttura=Modifica dei Dati della Struttura
 label.edit_tipologiaFormativa=Modifica della Tipologia Formativa
@@ -1366,7 +1368,6 @@ label.provincia=Provincia
 label.pubblica=Pubblica
 label.pulisci=Pulisci
 label.qualifica=Qualifica
-label.tematica_interesse_speciale=Tematica Speciale di interesse Nazionale o Regionale
 label.quietanzaPagamento=Quietanza di Pagamento
 label.quotaAnnuale= Quota annuale
 label.quotaAnnuale_list= Lista di quote annuale non pagate e scadute
@@ -1573,9 +1574,11 @@ label.svolgimento=Svolgimento
 label.sì=Sì
 label.tel_secondario=Telefono secondario
 label.telefono=Telefono
+label.tematica_interesse_speciale=Tematica Speciale di interesse Nazionale o Regionale
 label.tempo_dedicato=Tempo Dedicato
 label.tempo_dedicato=Tempo Dedicato
 label.tempo_indeterminato=Tempo indeterminato
+label.tempo_totale_att_form=Tempo totale att. form.
 label.tipo=Tipo
 label.tipoOrganizzatore_nome=Tipologia
 label.tipo_Wf=Tipo di workflow attivo
