--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1176,6 +1176,7 @@ label.new_datiStruttura=Inserimento dei Dati della Struttura
 label.new_tipologiaFormativa=Inserimento della Tipologia Formativa
 label.no=No
 label.no_profit=Società no-profit
+label.no_selezione=nessuno elemento
 label.nome=Nome
 label.nomeFile=Nome File
 label.nome_partner=Nome del partner
