#17240 - aggiunta nota a verifica RES

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -992,6 +992,7 @@ label.inserimento_sottoscrivente_verbale=Inserimento del Sottoscrivente del Verb
 label.inserimento_valutazione=Inserimento della Valutazione della Domanda
 label.inserimento_valutazione_commissione_in_ODG=Inserisci una Domanda di Accreditamento da valutare nell'Ordine del Giorno
 label.inserire_almeno_sede_legale=Inserire almeno la Sede Legale
+label.nota_bene_valutazione_verifica_RES=Nota bene:\n tempo massimo accreditabile solo per le tipologie formative “Corso di aggiornamento teorico e/o pratico (massimo 200 partecipanti)” o “Workshop/Seminario, che si svolge all’interno di Convegno/Congresso/Simposio/Conferenza (con meno di 100 partecipanti previsti)”
 label.inserisci=Inserisci
 label.inserisci_attivita=Inserisci Attività
 label.inserisci_contratto=Inserisci Contratto
