#17240 - label no ECM

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -992,7 +992,6 @@ label.inserimento_sottoscrivente_verbale=Inserimento del Sottoscrivente del Verb
 label.inserimento_valutazione=Inserimento della Valutazione della Domanda
 label.inserimento_valutazione_commissione_in_ODG=Inserisci una Domanda di Accreditamento da valutare nell'Ordine del Giorno
 label.inserire_almeno_sede_legale=Inserire almeno la Sede Legale
-label.nota_bene_valutazione_verifica_RES=Nota bene:\n tempo massimo accreditabile solo per le tipologie formative “Corso di aggiornamento teorico e/o pratico (massimo 200 partecipanti)” o “Workshop/Seminario, che si svolge all’interno di Convegno/Congresso/Simposio/Conferenza (con meno di 100 partecipanti previsti)”
 label.inserisci=Inserisci
 label.inserisci_attivita=Inserisci Attività
 label.inserisci_contratto=Inserisci Contratto
@@ -1088,7 +1087,7 @@ label.logo_provider=Logo Provider
 label.logo_provider_da_inserire=LOGO PROVIDER DA INSERIRE
 label.lookup=Cerca
 label.luogo=Luogo
-label.marca_no_ecm=Marca evento come no ECM
+label.marca_no_ecm=Marca evento come Evento svolto senza crediti ECM
 label.menu_azioni=Menù Azioni
 label.menu_riepiloghi=Menù Riepiloghi
 label.mese=mese
@@ -1176,6 +1175,7 @@ label.new_datiEconomici=Inserimento dei Dati Economici
 label.new_datiStruttura=Inserimento dei Dati della Struttura
 label.new_tipologiaFormativa=Inserimento della Tipologia Formativa
 label.no=No
+label.no_ecm=Evento svolto senza crediti ECM
 label.no_profit=Società no-profit
 label.no_selezione=nessuno elemento
 label.nome=Nome
@@ -1211,6 +1211,7 @@ label.non_sponsorizzato=Non sponsorizzato
 label.non_valido=non valido
 label.non_valutato=non valutato
 label.not_enabled=Disabilitato
+label.nota_bene_valutazione_verifica_RES=Nota bene:\n tempo massimo accreditabile solo per le tipologie formative “Corso di aggiornamento teorico e/o pratico (massimo 200 partecipanti)” o “Workshop/Seminario, che si svolge all’interno di Convegno/Congresso/Simposio/Conferenza (con meno di 100 partecipanti previsti)”
 label.note=Note
 label.noteOsservazioniIntegrazione=Note e Osservazioni Integrazione
 label.noteOsservazioniPreavvisoRigetto=Note e Osservazioni Preavviso di Rigetto
