#17242 - modifica etichette richieste

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1087,7 +1087,7 @@ label.logo_provider=Logo Provider
 label.logo_provider_da_inserire=LOGO PROVIDER DA INSERIRE
 label.lookup=Cerca
 label.luogo=Luogo
-label.marca_no_ecm=Marca evento come Evento svolto senza crediti ECM
+label.marca_no_ecm=Marca come evento svolto senza crediti ECM
 label.menu_azioni=Menù Azioni
 label.menu_riepiloghi=Menù Riepiloghi
 label.mese=mese
