19213 - duplicazione codice evento (doppia attuazione eventoPFA)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1799,6 +1799,7 @@ message.valutazione_salvata_team_leader_assegnato=Valutazione salvata e assegnat
 message.valutazione_variazione_dati_salvata=Valutazione della Variazione dei Dati e dei Documenti salvata con successo.
 message.verbale_salvato=Verbale aggiornato con successo.
 message.warning=Attenzione
+message.warning_evento_attuato=Evento PFA risulta già attuato!
 message.warning_no_privilegi_necessari_risorsa=L'utente risulta non avere i privilegi necessari per accedere alla risorsa.
 message.xml_evento_validation_ok=Report importato con successo.
 month.agosto=Agosto
