#19213 - bugfix duplicazione attuazione evento

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1800,6 +1800,7 @@ message.valutazione_variazione_dati_salvata=Valutazione della Variazione dei Dat
 message.verbale_salvato=Verbale aggiornato con successo.
 message.warning=Attenzione
 message.warning_evento_attuato=Evento PFA risulta già attuato!
+message.warning_evento_attuato_residuo_duplicazione=Evento PFA risulta già attuato a causa di un residuo della duplicazione!
 message.warning_no_privilegi_necessari_risorsa=L'utente risulta non avere i privilegi necessari per accedere alla risorsa.
 message.xml_evento_validation_ok=Report importato con successo.
 month.agosto=Agosto
